@@ -68,6 +68,7 @@ export(collapse_tags)
 export(colo)
 export(combine_counts)
 export(coverage)
+export(drop_terms)
 export(evaluate)
 export(frequent_ngrams)
 export(frequent_terms)
